--- a/content/404.html
+++ b/content/404.html
@@ -185,6 +185,6 @@ if (!doNotTrack) {
 
 	</div>
 <script async defer src="/js/menu.js"></script>
-<a href="https://chs.us/lion.php">
+<a href="https://chs.us/lion.php"></a>
 </body>
 </html>
